@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-25T08:13:41Z",
-  "count_outdated" : 355,
-  "uniques_outdated" : 191,
-  "count" : 380,
+  "timestamp" : "2022-06-26T01:05:17Z",
+  "count_outdated" : 357,
+  "uniques_outdated" : 192,
+  "count" : 382,
   "uniques" : 207,
   "clones" : [
-    {
-      "timestamp": "2022-06-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-12T00:00:00Z",
       "count": 1,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
